# HackFest

./: .env  .gitignore  INTEGRATION.md  Project.md  README.md  data.json  main.py  pyproject.toml  requirements.txt  test.md  ui.html
backend/: main.py
frontend/: ui.html
