[project]
name = "hackfest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "pydantic==2.13.2",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.12",
    "sarvamai>=0.1.27",
    "uvicorn[standard]==0.30.6",
    "websockets==13.1",
]
